more spacing fixes

--- a/static/assets/css/materialDateTimePicker.css
+++ b/static/assets/css/materialDateTimePicker.css
@@ -151,7 +151,7 @@
 }
 
 .dtp table.dtp-picker-days tr>th {
-    color: #e8e8e8;
+    color: #545454;
     text-align: center;
     font-weight: 700;
     padding: .4em .3em;
